2022-10-19  Aldy Hernandez  <aldyh@redhat.com>

	* range-op-float.cc (build_le): Document result.
	(build_lt): Same.
	(build_ge): Same.
	(foperator_ge::op2_range): Check result of build_*.
	(foperator_unordered_le::op1_range): Same.
	(foperator_unordered_le::op2_range): Same.
	(foperator_unordered_gt::op1_range): Same.
	(foperator_unordered_gt::op2_range): Same.
	(foperator_unordered_ge::op1_range): Same.
	(foperator_unordered_ge::op2_range): Same.

2022-10-19  Marek Polacek  <polacek@redhat.com>

	PR c++/85043
	* doc/invoke.texi: Update documentation of -Wuseless-cast.

2022-10-19  Andrew MacLeod  <amacleod@redhat.com>

	* gimple-range-cache.cc (ranger_cache::range_from_dom): Use
	  Value_Range not int_range_max.

2022-10-19  Aldy Hernandez  <aldyh@redhat.com>

	PR tree-optimization/107312
	* range.h (range_true_and_false): Special case 1-bit signed types.
	* value-range.cc (range_tests_misc): New test.

2022-10-19  LIU Hao  <lh_mouse@126.com>

	* config/i386/mingw-mcfgthread.h: New file
	* config/i386/mingw32.h: Add builtin macro and default libraries
	for mcfgthread when thread model is `mcf`
	* config.gcc: Include 'i386/mingw-mcfgthread.h' when thread model
	is `mcf`
	* configure.ac: Recognize `mcf` as a valid thread model
	* config.in: Regenerate
	* configure: Regenerate

2022-10-19  Lewis Hyatt  <lhyatt@gmail.com>

	* gengtype.cc (output_escaped_param): Add missing const.
	(get_string_option): Add missing check for option type.
	(walk_type): Support new "string_length" GTY option.
	(write_types_process_field): Likewise.
	* ggc-common.cc (gt_pch_note_object): Add optional length argument.
	* ggc.h (gt_pch_note_object): Adjust prototype for new argument.
	(gt_pch_n_S2): Declare...
	* stringpool.cc (gt_pch_n_S2): ...new function.
	* doc/gty.texi: Document new GTY((string_length)) option.

2022-10-19  Martin Liska  <mliska@suse.cz>

	* doc/extend.texi: Remove useless @tie{} directives.

2022-10-19  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/107206